--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <p>Putra dari Bpk. Edward masen<br> dan <br> Ibu Esmee cullen</p>
           </div>
         <div class="col-4">
-          <img src="image/edward01.jpg" alt="Edward Cullen" class="img-responsive rounded-circle">
+          <img src="image/breaking.jpg.crdownload" alt="Edward Cullen" class="img-responsive rounded-circle">
         </div>
         </div>
       </div>
@@ -95,12 +95,12 @@
       <div class="col-lg-6">
         <div class="row">
           <div class="col-4">
-            <img src="image/Bella.jpg" alt="Bella Swan" class="img-responsive rounded-circle">
+            <img src="image/bella09.jpg" alt="Bella Swan" class="img-responsive rounded-circle">
           </div>
           <div class="col-8">
             <h3>Isabella Merie Swan</h3>
             <p>Menjadi Ratu Vampire Clan Utara</p>
-            <p>Putra dari Bpk. Charlie Swan <br> dan <br> Ibu Rhenee Swath</p>
+            <p>Putri dari Bpk. Charlie Swan <br> dan <br> Ibu Rhenee Swath</p>
           </div>
         </div>
       </div>
