--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <p>Putra dari Bpk. Edward masen<br> dan <br> Ibu Esmee cullen</p>
           </div>
         <div class="col-4">
-          <img src="image/breaking.jpg.crdownload" alt="Edward Cullen" class="img-responsive rounded-circle">
+          <img src="image/breaking.jpg" alt="Edward Cullen" class="img-responsive rounded-circle">
         </div>
         </div>
       </div>
