--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8 text-center">
         <h2>Acara Pernikahan</h2>
-        <h3>Akan Dilangsungkan pada 31 Desember 2023 Di Hutan America lands Washington Utara.</h3>
+        <h3>Akan Dilangsungkan pada 31 Desember 2023 Di Hutan America Lands Washington Utara.</h3>
         <p>Oleh Karena Itu, Dengan Segala Hormat, Kami Bermaksud Untuk Mengundang Bapak/Ibu,
           Saudra/i, Untuk Hadir Pada Acara Pernikahan Kami.</p>
       </div>
@@ -90,7 +90,7 @@
         </div>
       </div>
 
-      <span class="hati"><i class="bi bi-heart-fill"></i></span>
+      <span class="hati"><i class="bi bi-heart-half"></i></span>
 
       <div class="col-lg-6">
         <div class="row">
