--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               </div>
               <div class="col-md-6">
                 <i class="bi bi-calendar d-block"></i>
-                <span>Senin, 1 Januari 2024</span>
+                <span>Minggu, 31 Desember 2023</span>
               </div>
             </div>
           </div>
@@ -176,9 +176,9 @@
  <script>
   simplyCountdown('.simply-countdown', {
     year: 2023, // required
-            month: 12, // required
-            day: 30, // required
-            hours: 8, // Default is 0 [0-23] integer
+            month: 12,// required
+            day: 30,// required
+            hours: 8,// Default is 0 [0-23] integer
             words: { //words displayed into the countdown
                 days: { singular: 'Hari', plural: 'Hari' },
                 hours: { singular: 'Jam', plural: 'Jam' },
