--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </div>
           </div>
           <div class="card-footer">
-            Pada Saat Acara Berlangsung Tolong Jangan Mengeluarkan Kekuatan clan vampire dan Clan Serigala.
+            Pada Saat Acara Berlangsung Tolong Jangan Mengeluarkan Kekuatan clan vampire dan Clan Serigala Terima Kasih Untuk Kerjasamanya.
           </div>
         </div>
       </div>
